--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,14 @@
         android:theme="@style/Theme.Writecode"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.CartActivity"
+            android:exported="true" />
+        <activity
+            android:name=".Activity.DetailActivity"
+            android:exported="true" />
+        <activity
             android:name=".Activity.ListFoodsActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".Activity.MainActivity"
             android:exported="true" />
